# TestRoutineSet

./: .gitignore  CMakeLists.txt  ContinuousMap.h  README.md
2048/: CMakeLists.txt  main.cpp  mods.ann
ANN/: CMakeLists.txt  TooL.cpp  TooL.h  genann.c  genann.h  main.cpp
A_Star_Algorithm/: AStar.h  CMakeLists.txt  MemoryPool.h  main.cpp
AngelScript/: AngelScriptCode.cpp  AngelScriptCode.h  CMakeLists.txt  main.cpp
ArhatTower/: CMakeLists.txt  main.cpp
BP/: BpNet.cpp  BpNet.h  CMakeLists.txt  Util.cpp  Util.h  main.cpp
Brensenham/: CMakeLists.txt  main.cpp
BresenhamPerformance/: CMakeLists.txt  Timer.h  main.cpp
C++Rasterization/: CMakeLists.txt  Camera.cpp  SDL_Bunny.cpp  Vector3D.cpp  Vector3D.h  shader.cpp
CellMachine/: CMakeLists.txt  main.cpp
CellPhysics/: CMakeLists.txt  Physics.h  main.cpp
ClassCallback/: CMakeLists.txt  main.cpp
ContinuousPlate/: CMakeLists.txt  ContinuousPlate.h  ContinuousPlate2.h  Queue.h  main.cpp
Curl_WedDav/: CMakeLists.txt  WebDav.cpp  Writer.txt  main.cpp
DLL/: CMakeLists.txt  D.cpp  NEWDLL.bat  main.cpp
Dithering/: CMakeLists.txt  main.cpp
FastNoiseLite/: CMakeLists.txt  main.cpp
Freetype/: CMakeLists.txt  main.cpp
GenerateMaze/: CMakeLists.txt  main.cpp
GridNavigation/: CMakeLists.txt  GridNavigation.h  main.cpp
Hough/: CMakeLists.txt  canny.cpp  main.cpp
JPS/: CMakeLists.txt  JPS.h  main.cpp
Kompute/: CMakeLists.txt  main.cpp
Labyrinth/: CMakeLists.txt  main.cpp
MIDI/: CMakeLists.txt  main.cpp  夜に駆ける.mid
MechanicalArm/: ArmConsole.hpp  CMakeLists.txt  Mechanical_arm.cpp  Mechanical_arm.hpp  main.cpp
MomentOfInertia/: CMakeLists.txt  main.cpp
MovePlate/: CMakeLists.txt  MovePlate.h  main.cpp
QRCode/: CMakeLists.txt  main.cpp
Quadtree/: Box.h  CMakeLists.txt  Quadtree.h  physics.cpp
RedBlackTree/: BinarySearchTree.h  CMakeLists.txt  main.cpp
ReptilesYouDao/: CMakeLists.txt  main.cpp
SoloudMIDI/: CMakeLists.txt  CustomSoundFont.html  main.cpp  soloud_midi.cpp  soloud_midi.h
TCPA/: CMakeLists.txt  main.cpp
TCPB/: CMakeLists.txt  main.cpp
TCPClientFilter/: CMakeLists.txt  main.cpp
TCPServerFilter/: CMakeLists.txt  main.cpp
TTF_bin/: CMakeLists.txt  Img.h  main.cpp
Timer/: CMakeLists.txt  Timer.h  main.cpp
Trie/: CMakeLists.txt  main.cpp
View/: CMakeLists.txt  View.h  ViewPos.h  main.cpp
Vuh/: CMakeLists.txt  compile.bat  main.cpp  mandelbrot.spv  saxpy.spv
VulKan_Mandelbrot/: CMakeLists.txt  comp.spv  compile.bat  main.cpp  shader.comp
WFC/: CMakeLists.txt  main.cpp  propagator.cpp  wave.cpp  wfc.cpp
clang/: CMakeLists.txt  Class.hpp  mian.cpp
jps_grid/: CMakeLists.txt  jumppointsearch.c  sample_map_in_30x30.txt
sml/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  FilePath.h  GlobalStructural.h  GlobalVariable.cpp  GlobalVariable.h
src/ImGui/: GUI.h  Interface.cpp  Interface.h  imgui_impl_vulkan.cpp
src/Tool/: AStar.h  BlockData.h  ContinuousData.h  ContinuousMap.h  ContinuousPlate.h  GenerateMaze.h  Iterator.h  JPS.h  LimitUse.h  PileUp.h  Quadtree.h  Queue.h  QueueData.h  ThreadPool.h  Timer.h  Tool.cpp  Tool.h  log.cpp
src/Vulkan/: Window.cpp  Window.h  buffer.cpp  buffer.h  commandBuffer.h  commandPool.h  description.h  descriptorPool.cpp  descriptorPool.h  descriptorSet.cpp  descriptorSet.h  descriptorSetLayout.h  device.cpp  device.h  fence.h  image.cpp  image.h  instance.cpp  instance.h  pipeline.h  renderPass.h  sampler.cpp  sampler.h  semaphore.h  shader.h  swapChain.cpp  swapChain.h  windowSurface.h
src/VulkanTool/: AuxiliaryVision.cpp  AuxiliaryVision.h  CMakeLists.txt  Calculate.cpp  Calculate.h  CreatePipeline.cpp  CreatePipeline.h  PipelineS.cpp  PipelineS.h  PixelTexture.cpp  PixelTexture.h  Texture.cpp  Texture.h  VisualEffect.cpp  VisualEffect.h
src/shaders/: DungeonWarfareMist.comp  GifFragShader.frag  GifFragShader.vert  LineShader.frag  LineShader.vert  SpotNormal.geom  SpotShader.frag  SpotShader.vert  WarfareMist.comp  compile.bat  lessionShader.frag  lessionShader.vert
src/shaders/Spv/: DungeonWarfareMist.spv  GifFragShaderF.spv  GifFragShaderV.spv  LineShaderF.spv  LineShaderV.spv  SpotNormal.spv  SpotShaderF.spv  SpotShaderV.spv  WarfareMist.spv  fs.spv  vs.spv
test_buffer_filter_zlib/: CMakeLists.txt  test_buffer_filter_zlib.cpp  zlib_client.cpp  zlib_server.cpp
virtual/: CMakeLists.txt  main.cpp
