cmake_minimum_required(VERSION 3.5)


# 导入TCPA项目
add_subdirectory(TCPA build/TCPA)
# 导入TCPB项目
add_subdirectory(TCPB build/TCPB)
# 导入Labyrinth项目
add_subdirectory(Labyrinth build/Labyrinth)
# 导入GenerateMaze项目
add_subdirectory(GenerateMaze build/GenerateMaze)
# 导入VUH项目
add_subdirectory(VUH build/VUH)
# 导入Brensenham项目
add_subdirectory(Brensenham build/Brensenham)
# 导入Kompute项目
add_subdirectory(Kompute build/Kompute)
# 导入VulKan_Mandelbrot项目
add_subdirectory(VulKan_Mandelbrot build/VulKan_Mandelbrot)
# 导入MIDI项目
add_subdirectory(MIDI build/MIDI)
# 导入SoloudMIDI项目
add_subdirectory(SoloudMIDI build/SoloudMIDI)
# 导入ClassCallback项目
add_subdirectory(ClassCallback build/ClassCallback)
# 导入C++Rasterization项目
add_subdirectory(C++Rasterization build/C++Rasterization)
# 导入Quadtree项目
add_subdirectory(Quadtree build/Quadtree)
# 导入RedBlackTree项目
add_subdirectory(RedBlackTree build/RedBlackTree)
# 导入Timer项目
add_subdirectory(Timer build/Timer)
# 导入ContinuousPlate项目
add_subdirectory(ContinuousPlate build/ContinuousPlate)
