cmake_minimum_required(VERSION 3.5)


# 导入TCPA项目
add_subdirectory(TCPA build/TCPA)
# 导入TCPB项目
add_subdirectory(TCPB build/TCPB)
# 导入Labyrinth项目
add_subdirectory(Labyrinth build/Labyrinth)
# 导入GenerateMaze项目
add_subdirectory(GenerateMaze build/GenerateMaze)
# 导入VUH项目
add_subdirectory(VUH build/VUH)
# 导入Brensenham项目
add_subdirectory(Brensenham build/Brensenham)
# 导入Kompute项目
add_subdirectory(Kompute build/Kompute)
# 导入VulKan_Mandelbrot项目
add_subdirectory(VulKan_Mandelbrot build/VulKan_Mandelbrot)
# 导入MIDI项目
add_subdirectory(MIDI build/MIDI)
# 导入SoloudMIDI项目
add_subdirectory(SoloudMIDI build/SoloudMIDI)
# 导入ClassCallback项目
add_subdirectory(ClassCallback build/ClassCallback)
# 导入C++Rasterization项目
add_subdirectory(C++Rasterization build/C++Rasterization)
# 导入Quadtree项目
add_subdirectory(Quadtree build/Quadtree)
# 导入RedBlackTree项目
add_subdirectory(RedBlackTree build/RedBlackTree)
# 导入Timer项目
add_subdirectory(Timer build/Timer)
# 导入ContinuousPlate项目
add_subdirectory(ContinuousPlate build/ContinuousPlate)
# 导入test_buffer_filter_zlib项目
add_subdirectory(test_buffer_filter_zlib build/test_buffer_filter_zlib)
# 导入TCPClientFilter项目
add_subdirectory(TCPClientFilter build/TCPClientFilter)
# 导入TCPServerFilter项目
add_subdirectory(TCPServerFilter build/TCPServerFilter)
# 导入AngelScript项目
add_subdirectory(AngelScript build/AngelScript)
# 导入DLL项目
add_subdirectory(DLL build/DLL)
# 导入Curl_WedDav项目
add_subdirectory(Curl_WedDav build/Curl_WedDav)
# 导入ReptilesYouDao项目
add_subdirectory(ReptilesYouDao build/ReptilesYouDao)
# 导入A_Star_Algorithm项目
add_subdirectory(A_Star_Algorithm build/A_Star_Algorithm)
# 导入Trie项目
add_subdirectory(Trie build/Trie)
# 导入BP项目
add_subdirectory(BP build/BP)
# 导入sml项目
add_subdirectory(sml build/sml)
# 导入MovePlate项目
add_subdirectory(MovePlate build/MovePlate)
# 导入virtual项目
add_subdirectory(virtual build/virtual)
# 导入WFC项目
add_subdirectory(WFC build/WFC)
# 导入JPS项目
add_subdirectory(JPS build/JPS)
# 导入jps_grid项目
add_subdirectory(jps_grid build/jps_grid)
# 导入jps_grid项目
add_subdirectory(FastNoiseLite build/FastNoiseLite)
# 导入jps_grid项目
add_subdirectory(Freetype build/Freetype)
# 导入jps_grid项目
add_subdirectory(TTF_bin build/TTF_bin)
